src/tests/krate/publish/snapshots/crates_io__tests__krate__publish__edition__edition_is_saved-2.snap
---
source: src/tests/krate/publish/edition.rs
expression: response.json()
snapshot_kind: text
---
{
  "version": {
    "audit_actions": [
      {
        "action": "publish",
        "time": "[datetime]",
        "user": {
          "avatar": null,
          "id": "[id]",
          "login": "foo",
          "name": null,
          "url": "https://github.com/foo",
          "username": "foo"
        }
      }
    ],
    "bin_names": [],
    "checksum": "7bca599a373dd56631d8c47704f17d2c166e75ffc7327c6dcc54c91e3d290e5b",
    "crate": "foo",
    "crate_size": 169,
    "created_at": "[datetime]",
    "description": "description",
    "dl_path": "/api/v1/crates/foo/1.0.0/download",
    "documentation": null,
    "downloads": 0,
    "edition": "2021",
    "features": {},
    "has_lib": false,
    "homepage": null,
    "id": "[id]",
    "lib_links": null,
    "license": "MIT",
    "links": {
      "authors": "/api/v1/crates/foo/1.0.0/authors",
      "dependencies": "/api/v1/crates/foo/1.0.0/dependencies",
      "version_downloads": "/api/v1/crates/foo/1.0.0/downloads"
    },
    "num": "1.0.0",
    "published_by": {
      "avatar": null,
      "id": "[id]",
      "login": "foo",
      "name": null,
      "url": "https://github.com/foo",
      "username": "foo"
    },
    "readme_path": "/api/v1/crates/foo/1.0.0/readme",
    "repository": null,
    "rust_version": "1.0",
    "updated_at": "[datetime]",
    "yank_message": null,
    "yanked": false
  }
}
