src/tests/krate/publish/snapshots/crates_io__tests__krate__publish__edition__edition_is_saved-4.snap
---
source: src/tests/krate/publish/edition.rs
expression: response.json()
---
{
  "version": {
    "audit_actions": [
      {
        "action": "publish",
        "time": "[datetime]",
        "user": {
          "avatar": null,
          "id": "[id]",
          "login": "foo",
          "name": null,
          "url": "https://github.com/foo"
        }
      }
    ],
    "bin_names": [],
    "checksum": "7008c5c6b6cbf418070a998fad244bbde3ca712148e61e4d4b0d257682e30ad2",
    "crate": "foo",
    "crate_size": 172,
    "created_at": "[datetime]",
    "description": "description",
    "dl_path": "/api/v1/crates/foo/1.0.0/download",
    "documentation": null,
    "downloads": 0,
    "edition": "2021",
    "features": {},
    "has_lib": false,
    "homepage": null,
    "id": "[id]",
    "lib_links": null,
    "license": "MIT",
    "linecounts": {
      "languages": {},
      "total_code_lines": 0,
      "total_comment_lines": 0
    },
    "links": {
      "authors": "/api/v1/crates/foo/1.0.0/authors",
      "dependencies": "/api/v1/crates/foo/1.0.0/dependencies",
      "version_downloads": "/api/v1/crates/foo/1.0.0/downloads"
    },
    "num": "1.0.0",
    "published_by": {
      "avatar": null,
      "id": "[id]",
      "login": "foo",
      "name": null,
      "url": "https://github.com/foo"
    },
    "readme_path": "/api/v1/crates/foo/1.0.0/readme",
    "repository": null,
    "rust_version": "1.0",
    "trustpub_data": null,
    "updated_at": "[datetime]",
    "yank_message": null,
    "yanked": false
  }
}
